# Experiments

./: docu-gen-config.yaml  pyproject.toml
docu_gen/: main.py
generated_docs/User-Service/: postman.json  schema.yml
test_projects/user-service/: manage.py
test_projects/user-service/drf_spectacular/utils/: __init__.py
test_projects/user-service/rest_framework/: response.py
test_projects/user-service/rest_framework/views/: __init__.py
test_projects/user-service/views/: users.py
tests/: test_cli.py
