[tool.poetry]
name = "docu-gen"
version = "0.1.0"
description = "A Unified API Documentation CLI"
authors = ["Jules"]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["rich"], version = "^0.9.0"}
pyyaml = "^6.0"
drf-spectacular = "^0.27.0"

[tool.poetry.scripts]
docu-gen = "docu_gen.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"